# uci-shallow-red

./: Cargo.toml  README.md
.github/workflows/: main.yml  release.yml  rust-clippy.yml
src/: main.rs  timecontrol.rs
